--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8086
+  port: ${SERVER_PORT}
 
 spring:
   rabbitmq:
-    host: "localhost"
-    port: 5672
-    username: "admin"
-    password: "123456"
+    host: ${RABBITMQ_HOST}
+    port: ${RABBITMQ_PORT}
+    username: ${RABBITMQ_USERNAME}
+    password: ${RABBITMQ_PASSWORD}
